# rules_julia

./: .bazelrc  .gitignore  MODULE.bazel  README.md  VERSIONS.md  WORKSPACE
.github/workflows/: ci.yml
examples/: BUILD.bazel  README.md
examples/hello_world/: BUILD.bazel  hello.jl
julia/: BUILD.bazel  defs.bzl
julia/private/: BUILD.bazel  julia_binary.bzl  julia_library.bzl  julia_test.bzl  providers.bzl
tests/: BUILD.bazel  basic_binary.jl  basic_test.jl  binary_with_dep.jl  dep_a.jl  dep_b.jl  library_test.jl  testlib.jl  transitive_deps_test.jl
toolchain/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
